# Dawal

./: .env.example  .env.production.example  .gitattributes  .gitignore  DEPLOY.md  README.md  docker-compose.yml
admin/: .gitignore  Dockerfile  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_driver_pin.py  0003_booking_confirm_token.py  0004_rider_access_token.py  0005_membership_requests.py  f0bd3a08dafd_initial_schema.py
backend/app/: auth.py  config.py  db.py  main.py  scheduler.py  security.py  seed.py
backend/app/models/: __init__.py  admin.py  base.py  booking.py  core.py  credit.py  enums.py  trust.py
backend/app/routers/: admin_analytics.py  admin_auth.py  admin_bookings.py  admin_captains.py  admin_compliance.py  admin_credits.py  admin_drivers.py  admin_reports.py  admin_riders.py  admin_settings.py  areas.py  bookings.py  claim.py  disputes.py  drivers.py
backend/app/schemas/: admin.py  admin_pages.py  booking.py  captain.py  claim.py  dispute.py  driver.py
backend/app/services/: audit.py  booking_ops.py  claim.py  config_service.py  credit.py  geo.py  membership.py  otp.py  retention.py  scheduled_jobs.py  sms.py  standing.py  templates.py
backend/scripts/: dump_ddl.py
backend/tests/: conftest.py  test_admin.py  test_admin_pages.py  test_admin_reports.py  test_bookings.py  test_captains.py  test_claim.py  test_claim_concurrency.py  test_driver_portal.py  test_drivers.py  test_lifecycle.py  test_load_race.py  test_scheduled.py
driver/: app.js  (+3 more)
(+26 files in other folders)
